--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,12 @@ h2 {
 }
 
 .button {
-  padding: 0.75em 0.75em;
+  padding: 2em 4em;
   border: none;
   border-radius: 4px;
   background-color: var(--magenta-300);
   color: #fff;
+  cursor: pointer;
 }
 
 .button:hover,
@@ -51,15 +52,15 @@ main {
 }
 
 /**
- * START EDITING HERE
- * ==================
+ * START EDITING HERE FOR MODAL
+ * ============================
  */
 .point-hand {
   position: absolute;
   left: 0;
   right: 0;
   max-width: 3em;
-  margin-top: 1em;
+  margin-top: 3.5em;
   margin-right: auto;
   margin-left: auto;
   color: var(--magenta-300);
@@ -79,6 +80,11 @@ main {
   z-index: -1;
   padding: 1em;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+body.modal-is-open .modal-overlay {
+  opacity: 1;
+  z-index: 1;
 }
 
 .modal {
